--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,12 @@
 {
   "dependencies": {
-    "com.unity.2d.pixel-perfect": "1.0.1-preview",
     "com.unity.cinemachine": "2.2.6",
     "com.unity.incrementalcompiler": "0.0.42-preview.14",
     "com.unity.package-manager-ui": "1.9.11",
-    "com.unity.postprocessing": "2.0.9-preview",
     "com.unity.progrids": "3.0.0",
-    "com.unity.render-pipelines.lightweight": "3.0.0-preview",
-    "com.unity.shadergraph": "3.0.0-preview",
+    "com.unity.render-pipelines.lightweight": "1.1.10-preview",
+    "com.unity.render-pipelines.core": "1.1.10-preview",
+    "com.unity.shadergraph": "1.1.9-preview",
     "com.unity.textmeshpro": "1.2.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
