--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -37,7 +37,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.2d.spriteshape": "1.0.12-preview"
   },
   "registry": "https://staging-packages.unity.com"
 }
