--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,15 @@
 {
   "dependencies": {
-    "com.unity.2d.spriteshape": "1.0.12-preview",
-    "com.unity.ads": "2.0.8",
+    "com.unity.2d.spriteshape": "1.0.12-preview.1",
     "com.unity.analytics": "2.0.16",
-    "com.unity.cinemachine": "2.2.6",
-    "com.unity.incrementalcompiler": "0.0.42-preview.14",
+    "com.unity.cinemachine": "2.2.7",
+    "com.unity.incrementalcompiler": "0.0.42-preview.19",
     "com.unity.package-manager-ui": "1.9.11",
-    "com.unity.progrids": "3.0.0",
+    "com.unity.postprocessing": "2.0.11-preview",
+    "com.unity.progrids": "3.0.3-preview.0",
     "com.unity.purchasing": "2.0.3",
-    "com.unity.render-pipelines.core": "1.1.10-preview",
-    "com.unity.render-pipelines.lightweight": "1.1.10-preview",
-    "com.unity.shadergraph": "1.1.9-preview",
+    "com.unity.render-pipelines.core": "3.0.0-preview",
+    "com.unity.shadergraph": "3.0.0-preview",
     "com.unity.textmeshpro": "1.2.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
