--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.analytics": "2.0.16",
     "com.unity.cinemachine": "2.2.7",
     "com.unity.incrementalcompiler": "0.0.42-preview.19",
+    "com.unity.mathematics": "0.0.12-preview.17",
     "com.unity.package-manager-ui": "1.9.11",
     "com.unity.postprocessing": "2.0.11-preview",
     "com.unity.progrids": "3.0.3-preview.0",
